# pcl_clipper

./: README.md  dockerfile  entrypoint.sh
src/: CMakeLists.txt  main.cpp  visualize.py
